Silence cc warning about snprintf redefinition

* src/gpgrt-int.h: First undef snprintf.
--

GnuPG-bug-id: 4285
Signed-off-by: Werner Koch <wk@gnupg.org>